# HoyoLab-Utils

./: .env.example  .gitignore  Cargo.toml  codes.json  config.ini.example
src/: main.rs
src/redeem/: handle.rs  mod.rs  requests.rs  webhook.rs
src/sign/: handle.rs  mod.rs  requests.rs  webhook.rs
src/structs/: structs.rs
src/utils/: cookie_handle.rs  mod.rs  random.rs  refresh.rs  time.rs
