[package]
name = "HoyoLab-Sign_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["cookies", "json"] }
url = "2.2.2"
serde_json = "1.0"
chrono = "0.4.19"
rand = "0.8.3"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
rsa = "0.9.8"
base64 = "0.22"
regex = "1.11.1"
ini = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
